<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.hungth.cotoan.screen.home.HomeViewModel" />

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/demo_home">

        <Button
            android:id="@+id/button_play_online"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_home"
            android:text="@string/play_online_button"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.341"
            android:onClick="@{() -> viewModel.playOnline()}"/>

        <Button
            android:id="@+id/button_play_with_computer"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_home"
            android:text="@string/play_with_computer_button"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_play_online"
            android:onClick="@{() -> viewModel.playManVsCom()}"/>

        <Button
            android:id="@+id/button_play_2_people"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_home"
            android:text="@string/play_2_person_button"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_play_with_computer"
            android:onClick="@{() -> viewModel.playManVsMan()}"/>

        <Button
            android:id="@+id/button_guide"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_home"
            android:text="@string/guide_button"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_play_2_people"
            android:onClick="@{() -> viewModel.guide()}"/>

        <Button
            android:id="@+id/button_setting"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_home"
            android:text="@string/setting_button"
            android:textColor="@color/colorLight"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_guide"
            android:onClick="@{() -> viewModel.setting()}" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_setting" />
    </android.support.constraint.ConstraintLayout>

</layout>