<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollGuide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC1D0C07">

        <ImageView
            android:id="@+id/guide_di_quan"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cách đi quân"
            android:textColor="@color/colorDark"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/guide_di_quan"
            app:layout_constraintEnd_toEndOf="@+id/guide_di_quan"
            app:layout_constraintStart_toStartOf="@+id/guide_di_quan"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_cach_di_quan_1"
            android:textColor="@color/colorLight"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_di_quan" />

        <ImageView
            android:id="@+id/guide_an_quan"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textAnQuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cách ăn quân"
            android:textColor="@color/colorDark"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/guide_an_quan"
            app:layout_constraintEnd_toEndOf="@+id/guide_an_quan"
            app:layout_constraintStart_toStartOf="@+id/guide_an_quan"
            app:layout_constraintTop_toTopOf="@+id/guide_an_quan" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_cach_an_quan"
            android:textColor="@color/colorLight"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_an_quan" />

        <ImageView
            android:id="@+id/guide_luat_thang"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Luật thắng"
            android:textColor="@color/colorDark"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/guide_luat_thang"
            app:layout_constraintEnd_toEndOf="@+id/guide_luat_thang"
            app:layout_constraintStart_toStartOf="@+id/guide_luat_thang"
            app:layout_constraintTop_toTopOf="@+id/guide_luat_thang" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/title_luat_thang"
            android:textColor="@color/colorLight"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guide_luat_thang" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
